<resources>
    <string name="app_name">HowTu</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_web_view">WebView</string>
    <string name="title_activity_blackout">Blackout</string>
    <string name="title_activity_save_screen">SaveScreen</string>
    <string name="title_activity_screen_food">ScreenFood</string>
    <string name="title_activity_screen_drink">ScreenDrink</string>
    <string name="title_activity_screen_diy">ScreenDIY</string>
    <string name="title_activity_screen_auto">ScreenAuto</string>
    <string name="title_activity_screen_crafts">ScreenCrafts</string>
    <string name="title_activity_screen_style">ScreenStyle</string>
    <string name="title_activity_how_tu_web_view">HowTuWebView</string>
    <string name="title_activity_tutorial">tutorial</string>

    <string name="title_activity_how_tu_tutorial">howTuTutorial</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="title_activity_first_run">FirstRunActivity</string>
    <string name="title_activity_tutorial_full">tutorial_full</string>
    <string name="ChangeTire">Change a Tire</string>
    <string name="ChangeWiper">Change Wiper Blade</string>
    <string name="ChangeFuse">Change a Fuse</string>
    <string name="ChangeSpark">Replace Spark Plug</string>
    <string name="CheckFluids">Check Your Fluids</string>
    <string name="ChangeHeadlights">Change Your Headlights</string>
    <string name="ChangeFluid">Change Your Air Filter</string>
    <string name="FlushRadiator">Flush a Radiator</string>
    <string name="ChangeBrakePad">Change Your Brake Pads</string>
    <string name="Knit">Knit</string>
    <string name="Crochet">Crochet</string>
    <string name="Scarf">Knit a Scarf</string>
    <string name="Headband">Knit a Headband</string>
    <string name="StripedHeadband">Crochet a Striped Headband</string>
    <string name="FleeceBlanket">Make a Fleece Tie Blanket</string>
    <string name="BootCuffs">Make Your Own Boot Cuffs</string>
    <string name="Slime">Make Slime</string>
    <string name="Sand">Make Sand Art</string>
    <string name="Faucet">Fix a Leaky Faucet</string>
    <string name="Drain">Unclog a Shower Drain</string>
    <string name="UTrap">Remove U Trap Under Sink</string>
    <string name="WaterPressure">Test Your Water Pressure</string>
    <string name="Shingles">Replace Damaged Shingles</string>
    <string name="Caulk">Caulk Windows</string>
    <string name="Paint">Paint a Room</string>
    <string name="DrainWaterHeater">Drain a Water Heater</string>
    <string name="Knob">Replace a Door Knob</string>
    <string name="Martini">Make A Gin Martini</string>
    <string name="OldFashioned">Make An Old Fashioned</string>
    <string name="Manhattan">Make A Manhattan</string>
    <string name="Daquiri">Make a Daquiri</string>
    <string name="Margaritta">Make A Margarita</string>
    <string name="BloodyMary">Make A Bloody mary</string>
    <string name="WhiskeySour">Make A Whiskey Sour</string>
    <string name="Cosmo">Make A Cosmo</string>
    <string name="Mojito">Make A Mojito</string>
    <string name="Chili">Cook Chili</string>
    <string name="Pancakes">Cook Pancakes</string>
    <string name="Cookies">Bake Chocolate Chip Cookies</string>
    <string name="Spaghetti">Cook Spaghetti and Meatballs</string>
    <string name="GrilledCheese">Cook Grilled Cheese</string>
    <string name="Guac">Make Guacamole</string>
    <string name="FrenchToast">Cook French Toast</string>
    <string name="Brownies">Bake Brownies</string>
    <string name="MashedPotatoes">Make Mashed Potatoes</string>
    <string name="Tie1">Tie a Tie: Four in Hand Knot</string>
    <string name="Tie2">Tie a Tie: Pratt Knot</string>
    <string name="Tie3">Tie a Tie: Half Windsor Knot</string>
    <string name="Tie4">Tie a Tie: Windsor Knot</string>
    <string name="FrenchBraid">French Braid Hair</string>
    <string name="Fishtail">Fishtail Braid Hair</string>
    <string name="SmokeyEye">Create a Smokey Eye</string>
    <string name="Bowtie">Tie a Bowtie</string>
    <string name="Contour">Contour Your Face</string>
    <string name="PasteUrl">Paste url here</string>
    <string name="Crafts">Crafts</string>
    <string name="Style">Style</string>
    <string name="DIY">DIY</string>
    <string name="Auto">Auto</string>
    <string name="Food">Food</string>
    <string name="Drinks">Drinks</string>
    <string name="PasteURL2">Paste url here</string>
</resources>
