<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="0dp"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.drake.howtu.howtu.ScreenFood">

    <ImageView
        android:id="@+id/food"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:src="@drawable/food" />

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/food">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/button1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/style_button1"
                android:onClick="button1"
                android:text="@string/Chili"
                android:textAllCaps="false"
                android:textColor="#ffffff" />

            <Button
                android:id="@+id/button4"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/style_button1"
                android:onClick="button2"
                android:text="@string/Pancakes"
                android:textAllCaps="false"
                android:textColor="#ffffff" />

            <Button
                android:id="@+id/button5"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/style_button1"
                android:onClick="button3"
                android:text="@string/Cookies"
                android:textAllCaps="false"
                android:textColor="#ffffff" />

            <Button
                android:id="@+id/button6"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/style_button1"
                android:onClick="button4"
                android:text="@string/Spaghetti"
                android:textAllCaps="false"
                android:textColor="#ffffff" />

            <Button
                android:id="@+id/button7"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/style_button1"
                android:onClick="button5"
                android:text="@string/GrilledCheese"
                android:textAllCaps="false"
                android:textColor="#ffffff" />

            <Button
                android:id="@+id/button8"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/style_button1"
                android:onClick="button6"
                android:text="@string/Guac"
                android:textAllCaps="false"
                android:textColor="#ffffff" />

            <Button
                android:id="@+id/button9"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/style_button1"
                android:onClick="button7"
                android:text="@string/FrenchToast"
                android:textAllCaps="false"
                android:textColor="#ffffff" />

            <Button
                android:id="@+id/button10"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/style_button1"
                android:onClick="button8"
                android:text="@string/Brownies"
                android:textAllCaps="false"
                android:textColor="#ffffff" />

            <Button
                android:id="@+id/button11"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/style_button1"
                android:onClick="button9"
                android:text="@string/MashedPotatoes"
                android:textAllCaps="false"
                android:textColor="#ffffff" />


        </LinearLayout>
    </ScrollView>

</RelativeLayout>