<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:paddingBottom="0dp"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.drake.howtu.howtu.ScreenDIY">

    <ImageView
        android:id="@+id/diy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:src="@drawable/handy" />

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/diy">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/button2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/style_button1"
                android:onClick="button1"
                android:text="@string/Faucet"
                android:textAllCaps="false"
                android:textColor="#ffffff" />

            <Button
                android:id="@+id/button3"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/style_button1"
                android:onClick="button2"
                android:text="@string/Drain"
                android:textAllCaps="false"
                android:textColor="#ffffff" />

            <Button
                android:id="@+id/button4"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/style_button1"
                android:onClick="button3"
                android:text="@string/UTrap"
                android:textAllCaps="false"
                android:textColor="#ffffff" />

            <Button
                android:id="@+id/button5"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/style_button1"
                android:onClick="button4"
                android:text="@string/WaterPressure"
                android:textAllCaps="false"
                android:textColor="#ffffff" />

            <Button
                android:id="@+id/button6"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/style_button1"
                android:onClick="button5"
                android:text="@string/Shingles"
                android:textAllCaps="false"
                android:textColor="#ffffff" />

            <Button
                android:id="@+id/button7"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/style_button1"
                android:onClick="button6"
                android:text="@string/Caulk"
                android:textAllCaps="false"
                android:textColor="#ffffff" />

            <Button
                android:id="@+id/button8"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/style_button1"
                android:onClick="button7"
                android:text="@string/Paint"
                android:textAllCaps="false"
                android:textColor="#ffffff" />

            <Button
                android:id="@+id/button9"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/style_button1"
                android:onClick="button8"
                android:text="@string/DrainWaterHeater"
                android:textAllCaps="false"
                android:textColor="#ffffff" />

            <Button
                android:id="@+id/button10"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/style_button1"
                android:onClick="button9"
                android:text="@string/Knob"
                android:textAllCaps="false"
                android:textColor="#ffffff" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>