<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_no_margin"
    android:paddingRight="@dimen/activity_no_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="0dp"
    tools:context="com.drake.howtu.howtu.ScreenAuto">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/car"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:id="@+id/auto"/>

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/auto"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/linearLayout">

            <Button
                android:id="@+id/button1"
                android:layout_width="fill_parent"
                android:textAllCaps="false"
                android:background="@drawable/style_button1"
                android:textColor="#ffffff"
                android:layout_height="wrap_content"
                android:onClick="button1"
                android:text="@string/ChangeTire" />

            <Button
                android:id="@+id/button2"
                android:layout_width="fill_parent"
                android:textAllCaps="false"
                android:background="@drawable/style_button1"
                android:textColor="#ffffff"
                android:layout_height="wrap_content"
                android:onClick="button2"
                android:text="@string/ChangeWiper" />

            <Button
                android:id="@+id/button3"
                android:layout_width="fill_parent"
                android:textAllCaps="false"
                android:background="@drawable/style_button1"
                android:textColor="#ffffff"
                android:layout_height="wrap_content"
                android:onClick="button3"
                android:text="@string/ChangeFuse" />

            <Button
                android:id="@+id/button4"
                android:layout_width="fill_parent"
                android:textAllCaps="false"
                android:background="@drawable/style_button1"
                android:textColor="#ffffff"
                android:layout_height="wrap_content"
                android:onClick="button4"
                android:text="@string/ChangeSpark" />

            <Button
                android:id="@+id/button5"
                android:layout_width="fill_parent"
                android:textAllCaps="false"
                android:background="@drawable/style_button1"
                android:textColor="#ffffff"
                android:layout_height="wrap_content"
                android:onClick="button5"
                android:text="@string/CheckFluids" />

            <Button
                android:id="@+id/button6"
                android:layout_width="fill_parent"
                android:textAllCaps="false"
                android:background="@drawable/style_button1"
                android:textColor="#ffffff"
                android:layout_height="wrap_content"
                android:onClick="button6"
                android:text="@string/ChangeHeadlights" />

            <Button
                android:id="@+id/button7"
                android:layout_width="fill_parent"
                android:textAllCaps="false"
                android:background="@drawable/style_button1"
                android:textColor="#ffffff"
                android:layout_height="wrap_content"
                android:onClick="button7"
                android:text="@string/ChangeFluid" />

            <Button
                android:id="@+id/button8"
                android:layout_width="fill_parent"
                android:textAllCaps="false"
                android:background="@drawable/style_button1"
                android:textColor="#ffffff"
                android:layout_height="wrap_content"
                android:onClick="button8"
                android:text="@string/FlushRadiator" />

            <Button
                android:id="@+id/button9"
                android:layout_width="fill_parent"
                android:textAllCaps="false"
                android:background="@drawable/style_button1"
                android:textColor="#ffffff"
                android:layout_height="wrap_content"
                android:onClick="button9"
                android:text="@string/ChangeBrakePad" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
